--- a/Od/MinJs/MinJs.csproj
+++ b/Od/MinJs/MinJs.csproj
@@ -37,6 +37,7 @@
       <DependentUpon>Jigsaw.js</DependentUpon>
     </Content>
     <Content Include="Jigsaw\bundleconfig.json" />
+    <Content Include="Jigsaw\package.json" />
     <None Include="Oath.js" />
     <Content Include="Jigsaw\Jigsaw.js" />
     <Content Include="Jigsaw\Jigsaw.min.js">
@@ -46,6 +47,7 @@
       <DependentUpon>Oath.js</DependentUpon>
     </Content>
     <Content Include="Oath\bundleconfig.json" />
+    <Content Include="Oath\package.json" />
     <None Include="Obs.js" />
     <Content Include="Oath\Oath.js" />
     <Content Include="Oath\Oath.min.js">
@@ -66,6 +68,9 @@
     <Content Include="ObsAndOd\bundleconfig.json" />
     <Content Include="ObsAndOdAndElements\bundleconfig.json" />
     <Content Include="Obs\bundleconfig.json" />
+    <Content Include="Obs\package.json" />
+    <Content Include="ObsAndOd\package.json" />
+    <Content Include="ObsAndOdAndElements\package.json" />
     <None Include="Od.js" />
     <Content Include="ObsAndOd\ObsAndOd.js" />
     <Content Include="ObsAndOd\ObsAndOd.min.js">
@@ -93,6 +98,8 @@
     <Content Include="README.md" />
     <Content Include="OdAndEnds\bundleconfig.json" />
     <Content Include="Od\bundleconfig.json" />
+    <Content Include="Od\package.json" />
+    <Content Include="OdAndEnds\package.json" />
     <None Include="Xhr.js" />
     <Content Include="Xhr.min.js">
       <DependentUpon>Xhr.js</DependentUpon>
@@ -102,6 +109,7 @@
       <DependentUpon>XhrAndOath.js</DependentUpon>
     </Content>
     <Content Include="Xhr\bundleconfig.json" />
+    <Content Include="Xhr\package.json" />
   </ItemGroup>
   <ItemGroup>
     <None Include="bundleconfig.json" />
